--- a/Named Entity Recognition using DL.ipynb
+++ b/Named Entity Recognition using DL.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMc4h4VViYLytzRPVWCXhNn",
+      "authorship_tag": "ABX9TyP8Hz64L66oJkP9PU6J/WXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3553,9 +3553,9 @@
         "id": "xarGPpOV1xYX"
       },
       "source": [
-        "ner_results.to_csv('NER_Results.csv')"
+        "ner_results.to_csv('NER_Results.csv', index = False)"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
