--- a/Named Entity Recognition using DL.ipynb
+++ b/Named Entity Recognition using DL.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8Hz64L66oJkP9PU6J/WXh",
+      "authorship_tag": "ABX9TyN3+J5g52dsb7DPKPRO7Iae",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -941,7 +941,7 @@
         "  word = re.sub(r\" +\", '', word)\n",
         "  return word"
       ],
-      "execution_count": null,
+      "execution_count": 149,
       "outputs": []
     },
     {
@@ -3095,6 +3095,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NEXqE-v17VHM"
+      },
+      "source": [
+        "### Making Prediction"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BUGYDCr9LDgC"
@@ -3411,6 +3420,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qh666r-u7ZXW"
+      },
+      "source": [
+        "### Accurcay Score"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ThaSlTxkzhfR"
@@ -3447,6 +3465,15 @@
           },
           "execution_count": 140
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_R0XSHFr7dau"
+      },
+      "source": [
+        "Creating Result Data Frame"
       ]
     },
     {
@@ -3561,7 +3588,584 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eQL4CJIs14o5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "eQL4CJIs14o5",
+        "outputId": "6432bc34-02ee-4110-bb51-6f391890a06c"
+      },
+      "source": [
+        "ner_results.tail()"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Actual Ground Truth</th>\n",
+              "      <th>Bi-Directional LSTM Model Prediction</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>188935</th>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>188936</th>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>188937</th>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>188938</th>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>188939</th>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Actual Ground Truth Bi-Directional LSTM Model Prediction\n",
+              "188935                   O                                    O\n",
+              "188936                   O                                    O\n",
+              "188937                   O                                    O\n",
+              "188938                   O                                    O\n",
+              "188939                   O                                    O"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FvHv0SID7h5G"
+      },
+      "source": [
+        "### Testing on Sentences"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6QRkqveB5oJm"
+      },
+      "source": [
+        "test_sentence = \"How are you Bruce, Hope you are doing good in Bangalore!\""
+      ],
+      "execution_count": 198,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jpU3pDo685ao"
+      },
+      "source": [
+        "def convert(dataset):\r\n",
+        "  dataset = dataset.replace(',', \"\")\r\n",
+        "  dataset = dataset.replace('.', \"\")\r\n",
+        "  dataset = dataset.replace('!', \"\")\r\n",
+        "  return dataset"
+      ],
+      "execution_count": 199,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JkyuDQiN7woT"
+      },
+      "source": [
+        "test_sentence = convert(test_sentence)"
+      ],
+      "execution_count": 200,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Ha6jk0kk8Btb",
+        "outputId": "b2d06816-46b4-49c2-d187-c53ea3d19a72"
+      },
+      "source": [
+        "test_sentence"
+      ],
+      "execution_count": 201,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'How are you Bruce Hope you are doing good in Bangalore'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 201
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ioI1_rsS8GeP"
+      },
+      "source": [
+        "test_sentence = test_sentence.split()"
+      ],
+      "execution_count": 202,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "voU7rNfxbxVt",
+        "outputId": "852af878-5cd0-4365-ccc4-f312564a2464"
+      },
+      "source": [
+        "test_sentence"
+      ],
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['How',\n",
+              " 'are',\n",
+              " 'you',\n",
+              " 'Bruce',\n",
+              " 'Hope',\n",
+              " 'you',\n",
+              " 'are',\n",
+              " 'doing',\n",
+              " 'good',\n",
+              " 'in',\n",
+              " 'Bangalore']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 203
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_bJIQ7wWcTeP"
+      },
+      "source": [
+        "test_sentence_encoded = []"
+      ],
+      "execution_count": 204,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M6hZHsC2b47t",
+        "outputId": "d06a4ac1-01df-4556-91f1-78d6d7fe285d"
+      },
+      "source": [
+        "encoder.encode(test_sentence[0])"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[14190]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 205
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gJ3O67f4cdNN"
+      },
+      "source": [
+        "for i in range(len(test_sentence)):\r\n",
+        "  test_sentence_encoded.append(encoder.encode(test_sentence[i]))"
+      ],
+      "execution_count": 206,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6TZ8lpBcn0f",
+        "outputId": "1a200230-398b-4060-c593-46c5d6ccbee9"
+      },
+      "source": [
+        "test_sentence_encoded"
+      ],
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[14190],\n",
+              " [24],\n",
+              " [681],\n",
+              " [12008],\n",
+              " [14195],\n",
+              " [681],\n",
+              " [24],\n",
+              " [1650],\n",
+              " [1023],\n",
+              " [3],\n",
+              " [8471]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 207
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "thQuQaPec55h"
+      },
+      "source": [
+        "test_result = []"
+      ],
+      "execution_count": 208,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X3PuWRwLdyX7",
+        "outputId": "b22a2b64-5363-4ffd-cfcf-f87ca187efe1"
+      },
+      "source": [
+        "len(test_sentence_encoded)"
+      ],
+      "execution_count": 209,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 209
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F7Q5ZrA8c9st",
+        "outputId": "3bd8b08f-ea12-4882-9953-b1deb42999ce"
+      },
+      "source": [
+        "for i in range(len(test_sentence_encoded)):\r\n",
+        "  print(i)\r\n",
+        "  test_result.append(cat[np.argmax(loaded_model.predict(test_sentence_encoded[i]))])"
+      ],
+      "execution_count": 210,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f4HPQvM2e5OM",
+        "outputId": "93dd71e0-ea0a-49b3-d01d-942b5466c0a4"
+      },
+      "source": [
+        "test_result"
+      ],
+      "execution_count": 211,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['B-per', 'O', 'O', 'I-org', 'B-geo', 'O', 'O', 'O', 'O', 'O', 'B-gpe']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 211
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a-eaYPqqetr7",
+        "outputId": "aaf72b74-30be-40e2-8c52-97e4a4249b36"
+      },
+      "source": [
+        "test_sentence"
+      ],
+      "execution_count": 212,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['How',\n",
+              " 'are',\n",
+              " 'you',\n",
+              " 'Bruce',\n",
+              " 'Hope',\n",
+              " 'you',\n",
+              " 'are',\n",
+              " 'doing',\n",
+              " 'good',\n",
+              " 'in',\n",
+              " 'Bangalore']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 212
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bG4IrQ4aflhM"
+      },
+      "source": [
+        "test_result_df = pd.DataFrame({'Word': test_sentence, 'Prediction': test_result})"
+      ],
+      "execution_count": 213,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 390
+        },
+        "id": "mwSMJGa2gT-K",
+        "outputId": "8fe5cf7f-1fc4-4317-dd57-ab447720905f"
+      },
+      "source": [
+        "test_result_df"
+      ],
+      "execution_count": 214,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Word</th>\n",
+              "      <th>Prediction</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>How</td>\n",
+              "      <td>B-per</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>are</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>you</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Bruce</td>\n",
+              "      <td>I-org</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Hope</td>\n",
+              "      <td>B-geo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>you</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>are</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>doing</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>good</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>in</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>Bangalore</td>\n",
+              "      <td>B-gpe</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         Word Prediction\n",
+              "0         How      B-per\n",
+              "1         are          O\n",
+              "2         you          O\n",
+              "3       Bruce      I-org\n",
+              "4        Hope      B-geo\n",
+              "5         you          O\n",
+              "6         are          O\n",
+              "7       doing          O\n",
+              "8        good          O\n",
+              "9          in          O\n",
+              "10  Bangalore      B-gpe"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 214
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Quo8te98gVw-"
       },
       "source": [
         ""
